Remove unnecessary CSS code and fix header visibility issue

--- a/01JHU_INST-JHU/css/prm-top-bar.css
+++ b/01JHU_INST-JHU/css/prm-top-bar.css
@@ -6,3 +6,9 @@
   prm-main-menu[menu-type="menu"] .md-button {
     font-size: .80em;
   }
+
+  /* Fix for the Collections header being hidden by the top bar */
+prm-collection-gallery-header > .collection-header-inner.has-transparent-topbar {
+  margin-top: 0;
+  padding-top: 100px;
+}
